# php-linter

./: Cargo.toml
src/: lib.rs  lints.rs
src/lints/: multiple_items.rs  no_assignment_inside_condition.rs  no_long_array_syntax.rs
