[package]
name = "php-linter"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.20"
color-eyre = "0.6"
tracing = { version = "0.1.29", features = ["log"] }
pretty_env_logger = "0.4"
once_cell = "1.9.0"
crossbeam = "0.8.1"
rayon = "1.5.1"
jwalk = "0.6.0"

[dependencies.tree-sitter-php]
git = "https://github.com/silen-z/tree-sitter-php"
